--- a/views/friend.pug
+++ b/views/friend.pug
@@ -1,7 +1,8 @@
 mixin friend(friendarg)
   div.flex.justify-between.p-4
     div.flex.items-center
+      - console.log("hello")
       a(href="/users/" + friendarg._id)
-        img(src="data:/image/" + user.image.contentType + ";base64," + friendarg.image.data.toString("base64")).h-20.w-20.bg-yellow-400.rounded.object-cover
+        img(src="data:" + friendarg.image.contentType + ";base64," + friendarg.image.data.toString("base64")).h-20.w-20.bg-yellow-400.rounded.object-cover
       div.ml-4
         a(href="/users/" + friendarg._id).text-md.text-gray-800.font-semibold #{friendarg.first_name} #{friendarg.last_name}
