--- a/views/request.pug
+++ b/views/request.pug
@@ -1,8 +1,9 @@
 mixin request(requestarg)
   div.flex.p-4.flex-col.items-center.space-y-2(class="sm:flex-row sm:justify-between")
     div.flex.items-center
+      - console.log("hello")
       a(href="/users/" + requestarg._id)
-        img(src="data:/image/" + user.image.contentType + ";base64," + requestarg.image.data.toString("base64")).h-20.w-20.bg-yellow-400.rounded.object-cover
+        img(src="data:" + requestarg.image.contentType + ";base64," + requestarg.image.data.toString("base64")).h-20.w-20.bg-yellow-400.rounded.object-cover
       div.ml-4
         a(href="/users/" + requestarg._id).text-md.text-gray-800.font-semibold #{requestarg.first_name} #{requestarg.last_name}
     form(method="POST" action="").flex.items-center
